--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  intl: ^0.19.0
+
+  # Firebase
+  cloud_firestore: ^4.15.6
+  firebase_storage: ^11.6.7
+  firebase_core: ^2.25.5
+  firebase_auth: ^4.17.6
 
 dev_dependencies:
   flutter_test:
