--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,15 @@ dependencies:
 
   # State Management
   get: ^4.6.6
-  shared_preferences: ^2.2.2
+  
+  # create pdf document
+  pdf: ^3.1.0
+
+  # save file
+  path_provider: ^2.0.1
+
+  # open pdf document
+  open_file: ^3.1.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
