--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-            <provider
+            <!-- <provider
                 android:name="androidx.core.content.FileProvider"
                 android:authorities="${applicationId}.fileProvider"
                 android:exported="false"
@@ -39,6 +39,6 @@
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/filepaths"
                     tools:replace="android:resource" />
-        </provider>
+        </provider> -->
     </application>
 </manifest>
