--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:label="bawari"
         android:name="${applicationName}"
@@ -29,7 +31,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-            <provider
+            <!-- <provider
                 android:name="androidx.core.content.FileProvider"
                 android:authorities="${applicationId}.fileProvider"
                 android:exported="false"
@@ -39,6 +41,6 @@
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/filepaths"
                     tools:replace="android:resource" />
-        </provider>
+        </provider> -->
     </application>
 </manifest>
